Delete some unuse file & Fix load wrong api (user)(guess)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "nextjs",
     "spiderumapp",
     "toastify",
-    "Trung"
+    "Trung",
+    "UNSAVE"
   ],
   "files.exclude": {
     "**/.git": true,
