--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.5",
+    "@nextui-org/react": "^1.0.1-alpha.57",
     "@nrwl/next": "13.1.3",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
