--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^8.3.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.0",
     "eslint-config-prettier": "8.1.0",
@@ -90,5 +91,10 @@
     "twin.macro": "^2.8.1",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
