feat(header): implement Avatar Dropdown and Category Dropdown

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "cSpell.words": [
     "eksell",
+    "headlessui",
     "hocs",
     "immer",
     "nextjs",
     "nextui",
+    "otakulture",
+    "OTAKULURE",
     "spiderumapp",
     "toastify",
     "Trung",
