--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@nextui-org/react": "^1.0.1-alpha.57",
     "@nrwl/next": "13.1.3",
