--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@nrwl/eslint-plugin-nx": "13.1.3",
     "@nrwl/jest": "13.1.3",
     "@nrwl/linter": "13.1.3",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^13.0.0",
     "@nrwl/react": "13.1.3",
     "@nrwl/storybook": "13.1.3",
     "@nrwl/tao": "13.1.3",
@@ -92,5 +92,5 @@
     "twin.macro": "^2.8.1",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0"
-  } 
+  }
 }
