--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroicons/react": "^1.0.5",
     "@nextui-org/react": "^1.0.1-alpha.57",
     "@nrwl/next": "13.1.3",
+    "cheerio": "^1.0.0-rc.10",
     "core-js": "^3.6.5",
     "formik": "^2.2.9",
     "immer": "^9.0.6",
