Add Lighthouse token for run CI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
   "cSpell.words": [
+    "autorun",
     "eksell",
     "headlessui",
     "hocs",
     "immer",
+    "lhci",
     "nextjs",
     "nextui",
     "otakulture",
