--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Testing
         run: npx nx affected --target=test --parallel --max-parallel=2
-        
+
       - name: Check Performance
         run: lhci autorun
 
@@ -63,9 +63,11 @@ jobs:
 
       - name: Testing
         run: npx nx affected --target=test --parallel --max-parallel=2
-        
+
       - name: Check Performance
         run: lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
       - name: Stop all agents
         run: npx nx-cloud stop-all-agents
