--- a/package.json
+++ b/package.json
@@ -93,5 +93,10 @@
     "twin.macro": "^2.8.1",
     "typescript": "~4.3.5",
     "url-loader": "^3.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
