fix(postdetails): fix some styles in post details and update some features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "cSpell.words": [
     "autorun",
+    "controlversial",
+    "danh",
     "eksell",
     "headlessui",
     "hocs",
@@ -11,9 +13,11 @@
     "Noto",
     "otakulture",
     "OTAKULURE",
+    "pullquote",
     "spiderumapp",
     "toastify",
     "Trung",
+    "Unfollow",
     "UNSAVE"
   ],
   "files.exclude": {
